# MLOps-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-mlflow  Dockerfile_model  README.md  asdf.py  backend-start.sh  compose.yaml  deploy-fastapi.sh  mlflow-compose.yaml  pyproject.toml  requirements.txt  requirements_btc_model.txt  requirements_classification.txt  requirements_ex.txt  requirements_save_raw_data.txt  run-deploy.sh  run-fastapi-local.sh  run-services.sh  run.sh  run_task.sh  start-services.sh  stop-services.sh  test.md  도커파일백업.txt
.astro/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: -feat-.md
.github/workflows/: cd.yaml  cd.yaml.bak  cd_workflow.yaml
dags/: api_pipeline.py  coin_news_api_call_pipeline.py  coin_price_api_pipeline.py  example_docker.py  example_ml_pipeline.py  exmaple_db_pipeline.py  upbit_price_api_pipeline.py
dags/api_pipeline/: api_pipeline.py  test.py
dags/module/: EDA.ipynb  __init__.py  coin_model.py  coin_model_regression_oof_backup.py  coin_news_api_call.py  coin_price_api_call.py  email_tasks.py  example_db.py  example_train.py  upbit_api_call.py  upbit_to_cloudsql.py
dags/pipeline/: coin_news_api_pipeline.py  example_ml_pipeline.py  exmaple_db_pipeline.py  test_pipeline.py
experiments/upbit_api/: api_test.py  (+1 more)
fastapi/: Dockerfile  cloudrun.yaml  entrypoint.sh  locustfile.py  pyproject.toml  start.sh
info/: __init__.py  api.py  minio_config.py
prometheus/: docker-compose.yml  prometheus.yml
tests/: EDA.ipynb  EDA2.ipynb
upbit_api/: chatGPT_prompt.py  key.txt
(+71 files in other folders)
