[tool.poetry]
name = "ml-upbit-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ml_upbit_api"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
sqlalchemy = "1.4.52"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
